Updated main.py csp

--- a/templates/header.html
+++ b/templates/header.html
@@ -39,9 +39,9 @@
             rel="stylesheet"
         />
 
-        <script nonce="{{ response.nonce }}">
+        <script nonce="{{ request.cookies['csp_nonce'] }}">
             console.log('Inline script running!');
-            console.log("{{ response.headers.get('CSP-Nonce') }}");
+            console.log("{{ request.cookies['csp_nonce'] }}");
             function showLoading() {
                 document.getElementById('loadingOverlay').style.display = 'flex';
             }
