--- a/templates/header.html
+++ b/templates/header.html
@@ -39,9 +39,9 @@
             rel="stylesheet"
         />
 
-        <script nonce="{{ request.cookies['csp_nonce'] }}">
+        <script nonce="{{ nonce }}">
             console.log('Inline script running!');
-            console.log("{{ request.cookies['csp_nonce'] }}");
+            console.log("{{ nonce }}");
             function showLoading() {
                 document.getElementById('loadingOverlay').style.display = 'flex';
             }
