Update Inline JS to add a class instead of changing the style inline

--- a/static/style.css
+++ b/static/style.css
@@ -146,6 +146,9 @@
     100% { transform: rotate(360deg); }
   }
 
+  .show {
+    display: flex; /* Show the overlay */}
+
   /* Hero Section */
   .hero-section {
     display: grid;
