Update Inline JS to add a class instead of changing the style inline

--- a/static/style.css
+++ b/static/style.css
@@ -147,7 +147,8 @@
   }
 
   .show {
-    display: flex; /* Show the overlay */}
+    display: flex; /* Show the overlay */
+  }
 
   /* Hero Section */
   .hero-section {
