--- a/templates/header.html
+++ b/templates/header.html
@@ -43,6 +43,9 @@
             function showLoading() {
                 document.getElementById('loadingOverlay').classList.add('show');
             }
+            window.onload = function() {
+                document.getElementById('loadingOverlay').style.display = 'none'; // Ensure it's hidden on load
+            }
             
         </script>
             
