--- a/templates/header.html
+++ b/templates/header.html
@@ -41,7 +41,7 @@
 
         <script nonce="{{ nonce }}">
             function showLoading() {
-                document.getElementById('loadingOverlay').classList.add('show');
+                document.getElementById('loadingOverlay').classList.remove('hide');
             }
             
         </script>
