remove inline style of overlay

--- a/templates/recs.html
+++ b/templates/recs.html
@@ -86,7 +86,7 @@
 </div>
 
 <!-- Loading Overlay -->
-<div id="loadingOverlay" class="loading-overlay" style="display:none;">
+<div id="loadingOverlay" class="loading-overlay">
     <div class="spinner"></div>
     <p class="nav-title">Creating your customized playlist...</p>
 </div>
