add more exception handling

--- a/templates/recs.html
+++ b/templates/recs.html
@@ -9,9 +9,13 @@
     </p>
 
     <!-- Create Playlist logic and button -->
-    {% if message %}
-        <p class="hero-text flash">{{ message }}</p>
-    {% endif %}
+    {% with messages = get_flashed_messages(with_categories=True) %}
+        {% if messages %}
+            {% for category, message in messages %}
+                <p class="hero-text flash">{{ message }}</p>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
 
     {% if not playlist_url %}
         <form method="POST" action="/get_top_artists">
