--- a/templates/playlist_created.html
+++ b/templates/playlist_created.html
@@ -6,6 +6,9 @@
         Remember, we aim to give you the most accurate recommendations for
         artists that are lesser-known.
     </p>
+    <p class="text"></p>
+        Made possible by <img src="../static/images/Spotify_Full_Logo_RGB_Green.png" class="spotify-logo-button" alt="Spotify" />
+    </p>
 
     {% if img %}
         <a href="{{ playlist_url }}" target="_blank">
