--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,13 @@
         <h1 class="hero-title">DISCOVERY JAM</h1>
         <p class="nav-title">We aim to give you the most accurate recommendations for
             artists that are lesser-known.</p>
-        <a href="/login" class="login-btn"><span class="hero-text">Login with Spotify</span></a>
+
+
+        <a href="/login" class="login-btn">
+            <span class="hero-text">Login with 
+                <img src="../static/images/Spotify_Full_Logo_RGB_Green.png" class="spotify-logo-button" alt="Spotify" /></span></a>
+
+        
     </div>
 
 {% include 'footer.html' %}
