--- a/templates/recs.html
+++ b/templates/recs.html
@@ -22,13 +22,15 @@
             <!-- CSRF token for security -->
             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
             <button class="submit-btn" type="submit">
-                Create Spotify Playlist
+                Create <img src="../static/images/Spotify_Full_Logo_RGB_Green.png" class="spotify-logo-button" alt="Spotify" /> Playlist
             </button>
         </form>
     {% else %} 
         <a href="{{ playlist_url }}" class="login-btn" target="_blank"
             ><span class="hero-text">Your Discovery Jam</span></a>
     {% endif %}
+
+    <p class="text">All data gathered from and provided by <img src="../static/images/Spotify_Full_Logo_RGB_Green.png" class="spotify-logo-button" alt="Spotify" /></p>
      
     <p class="subheading">Looking at the past year of your listening...</p>
 
@@ -79,7 +81,7 @@
             <!-- CSRF token for security -->
             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
             <button class="submit-btn" type="submit">
-                Create Spotify Playlist
+                Create <img src="../static/images/Spotify_Full_Logo_RGB_Green.png" class="spotify-logo-button" alt="Spotify" /> Playlist
             </button>
         </form>
     {% else %} 
