added more logout buttons

--- a/templates/playlist_created.html
+++ b/templates/playlist_created.html
@@ -21,6 +21,10 @@
      
     <p class="subheading">Thank you for using Discovery Jam</p>
     
+    <!--  logout button -->
+    <a href="{{ url_for('logout') }}" class="logout-btn">
+        <span class="text">logout from Spotify</span></a>
+    
 </div>
 
 {% include 'footer.html' %}
