--- a/templates/recs.html
+++ b/templates/recs.html
@@ -30,6 +30,10 @@
             ><span class="hero-text">Your Discovery Jam</span></a>
     {% endif %}
 
+        <!--  logout button -->
+        <a href="{{ url_for('logout') }}" class="logout-btn">
+            <span class="text">Logout</span></a>
+
     <p class="text">All data gathered from and provided by Spotify but is not endorsed, certified, or otherwise approved by Spotify.</p>
      
     <p class="subheading">Looking at the past year of your listening...</p>
